# llm-agent-research-extractions

./: CONSTITUTION.md  FINAL_REVIEW_AND_COMPLETENESS_AR.md  MASTER_GRAPH_ARABIC.md  MASTER_GRAPH_ARABIC.mmd  MASTER_GRAPH_ENGLISH.md  MASTER_GRAPH_ENGLISH.mmd  Makefile  PROJECT_INDEX.md  QUALITY_REVIEW_AR.md  QUALITY_STANDARD_AR.md  README.md  build_sdk.py  deep_dive_task_matrix.md  final_completeness_check_ar.md  graph_arabic.md  graph_arabic.mmd  graph_english.md  graph_english.mmd  prompts_complete.md  pyproject.toml  python_logic_flow_complete.md  python_logic_inventory.json  research_summary.md
explorer/: app.py
llm_agent_prompts/systems/: __init__.py  chainofthought.py  storm.py
master-unified-pipeline/: QUALITY_REVIEW_AR.md  README.md  deep_dive_task_matrix.md  final_completeness_check_ar.md  pattern_extraction.md  prompts_complete.md  python_logic_flow_complete.md  python_logic_inventory.json  research_summary.md  search_family_map.md  unified_architecture.md
master-unified-pipeline/docs/: REVIEW_AR_2026-07-10.md  SELF_QA_IMPROVEMENT_AR.md  SELF_QA_IMPROVEMENT_VOYAGER_OPRO_AR.md
master-unified-pipeline/graphs/: MASTER_UNIFIED_ARABIC.md  MASTER_UNIFIED_ARABIC.mmd  MASTER_UNIFIED_ENGLISH.md  MASTER_UNIFIED_ENGLISH.mmd
projects/ai-scientist-v2/: QUALITY_REVIEW_AR.md  README.md  audit_summary.txt  deep_dive_task_matrix.md  final_audit_review_ar.md  final_completeness_check_ar.md  graph_arabic.mmd  graph_english.md  graph_english.mmd  python_logic_flow_complete.md  python_logic_inventory.json  research_summary.md
projects/ape/: QUALITY_REVIEW_AR.md  (+12 more)
(+309 files in other folders)
