[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agent-explorer"
version = "1.0.0"
description = "SOTA Interactive Web Explorer for LLM Agent Architectures (20+ Papers)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fares Rafat" }]

dependencies = [
  "streamlit>=1.35.0",
  "loguru>=0.7.0",
  "pandas>=2.0.0",
  "markdown>=3.4.0"
]

[project.scripts]
agent-explorer = "explorer.app:main"
